tests/errors/statistics_quantiles_short.experr
at least two data points
